--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Band</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
     <link rel="stylesheet" href="assest/css/style.css" />
     <link rel="stylesheet" href="./assest/themify-icons/themify-icons.css" />
   </head>
@@ -13,17 +18,17 @@
       <div id="header">
         <!-- begin nav -->
         <ul id="nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Band</a></li>
-          <li><a href="">Tour</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#theband">Band</a></li>
+          <li><a href="#tourr">Tour</a></li>
+          <li><a href="#contactt">Contact</a></li>
           <li>
             <a href="">More <i class="ti-angle-down"></i> </a>
 
             <ul class="subnav">
-              <li><a href="">Merchandise</a></li>
-              <li><a href="">Extras</a></li>
-              <li><a href="">Media</a></li>
+              <li><a href="#!">Merchandise</a></li>
+              <li><a href="#!">Extras</a></li>
+              <li><a href="#!">Media</a></li>
             </ul>
           </li>
         </ul>
@@ -32,47 +37,222 @@
         <div class="search-btn">
           <i class="search-icon ti-search"></i>
         </div>
-        <!--end button seach -->
+        <!--end button viết cái tìm kiếm seach -->
       </div>
+
       <div id="slider">
-        <div class="text-content">
-          <h2 class="text-heading">New Yord</h2>
-          <div class="text-d">The atmosphere in New York is lorem ipsum.</div>
+        <div class="slidernbg">
+          <div class="sliderimg">
+            <img src="/assest/img/newyord.jpg" alt="" />
+            <div class="text-content">
+              <h2 class="text-heading">New York</h2>
+              <div class="text-d">
+                The atmosphere in New York is lorem ipsum.
+              </div>
+            </div>
+          </div>
+
+          <div class="sliderimg">
+            <img src="/assest/img/chicago.jpg" alt="" />
+            <div class="text-content">
+              <h2 class="text-heading">Chicago</h2>
+              <div class="text-d">
+                Thank you, Chicago - A night we won't forget.
+              </div>
+            </div>
+          </div>
+
+          <div class="sliderimg">
+            <img src="/assest/img/lordang.jpg" alt="" />
+            <div class="text-content">
+              <h2 class="text-heading">Los Angeles</h2>
+              <div class="text-d">
+                We had the best time playing at Venice Beach!
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <div id="conten">
-        <div class="conten1">
-        <h2 class="conten2">THE BAND</h2>
-        <p class="conten3">We love music</p>
-        <p class="conten4">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-         <div class="anh">
-          <div class="panh1">
-          <p class="name1">Name</p>
-          <img src="/assest/img/onr.jpg" alt="Name" class="anh1">
+        <div id="theband" class="conten1">
+          <h2 class="conten2">THE BAND</h2>
+          <p class="conten3">We love music</p>
+          <p class="conten4">
+            We have created a fictional band website. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+          <div class="anh">
+            <div class="panh1">
+              <p class="name1">Name</p>
+              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+            </div>
+            <div class="panh1">
+              <p class="name1">Name</p>
+              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+            </div>
+            <div class="panh1">
+              <p class="name1">Name</p>
+              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+              <div class="clear"></div>
+            </div>
+          </div>
         </div>
-          <div class="panh1">
-          <p class="name1">Name</p>
-           <img src="/assest/img/onr.jpg" alt="Name" class="anh1">
-          </div>
-          <div class="panh1">
-          <p class="name1">Name</p>
-          <img src="/assest/img/onr.jpg" alt="Name" class="anh1">
-        <div class="clear"></div>
-         </div>  
-      </div>
-          <!-- tour -->
+        <!-- tour -->
+        <div id="tourr" class="tour">
           <div class="conten1">
-        <h2 class="conten2">TOUR DATES</h2>
-        <p class="conten3">Remember to book your tickets!</p>
-        
+            <h2 class="conten2">TOUR DATES</h2>
+            <p class="conten3">Remember to book your tickets!</p>
+            <ul class="tick">
+              <li>
+                <a href="#!"
+                  >September
+                  <span class="sold">Sold out</span>
+                </a>
+              </li>
+              <li>
+                <a href="#!"
+                  >October
+                  <span class="sold">Sold out</span>
+                </a>
+              </li>
+              <li>
+                <a href="#!"
+                  >November
+                  <span class="number3"> 3 </span>
+                </a>
+              </li>
+            </ul>
+            <!-- 3 cái ảnh cuối -->
+            <div class="boss">
+              <!-- bắt đầu ảnh 1 -->
+              <div class="sir">
+                <img
+                  src="https://www.w3schools.com/w3images/newyork.jpg"
+                  alt="loi"
+                  class="cardimg"
+                />
+                <div class="thembody">
+                  <h3 class="xam">New York</h3>
+                  <p class="date">Fri 27 Nov 2016</p>
+                  <p class="van">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="nut">Buy Tickets</button>
+                </div>
+              </div>
+              <!-- bắt đầu ảnh 2 -->
+              <div class="sir">
+                <img
+                  src="https://www.w3schools.com/w3images/paris.jpg"
+                  alt="loi"
+                  class="cardimg"
+                />
+                <div class="thembody">
+                  <h3 class="xam">Paris</h3>
+                  <p class="date">Sat 28 Nov 2016</p>
+                  <p class="van">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="nut">Buy Tickets</button>
+                </div>
+              </div>
+              <!-- bắt đầu ảnh 3 -->
+
+              <div class="sir">
+                <img
+                  src="https://www.w3schools.com/w3images/sanfran.jpg"
+                  alt="loi"
+                  class="cardimg"
+                />
+                <div class="thembody">
+                  <h3 class="xam">San Francisco</h3>
+                  <p class="date">Sun 29 Nov 2016</p>
+                  <p class="van">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="nut">Buy Tickets</button>
+                </div>
+              </div>
+            </div>
           </div>
-          <!-- CONTACT -->
-          <div class="conten1">
-        <h2 class="conten2">CONTACT</h2>
-        <p class="conten3">Fan? Drop a note!</p>
+        </div>
+        <!-- CONTACT -->
+        <div class="thempadding">
+          <div id="contactt" class="conten1">
+            <h2 class="conten2">CONTACT</h2>
+            <p class="conten3">Fan? Drop a note!</p>
           </div>
+          <div class="bottomtour conten1">
+            <div class="bottomcontact">
+              <!-- vi tri -->
+              <div class="bottomhive">
+                <i class="ti-location-pin"></i>
+                <p class="hive">Chicago, US</p>
+              </div>
+              <!-- phone  -->
+              <div class="bottomhive">
+                <i class="ti-mobile"></i>
+                <p class="hive">Phone: +00 151515</p>
+              </div>
+              <!-- gmail -->
+              <div class="bottomhive">
+                <i class="ti-email"></i>
+                <p class="hive">Email: mail@mail.com</p>
+              </div>
+            </div>
+            <!-- bottomcontact=khoi2 -->
+            <div class="khoi2">
+              <div class="nhapchu">
+                <input class="name" type="text" placeholder="Name" />
+                <input type="text" class="email" placeholder="Email" />
+              </div>
+              <input type="text" class="nhapmess" placeholder="Message" />
+              <button class="send">SEND</button>
+            </div>
+          </div>
+        </div>
+        <img
+          src="https://www.w3schools.com/w3images/map.jpg"
+          alt=""
+          class="anhcuoichan"
+        />
       </div>
-      <div id="footer"></div>
+      <div id="footer">
+        <div>
+          <i class="ti-facebook"></i>
+          <i class="ti-instagram"></i>
+          <i class="ti-github"></i>
+          <i class="ti-pinterest-alt"></i>
+          <i class="ti-twiter"></i>
+          <i class="ti-linkedin"></i>
+        </div>
+        <p class="powed">
+          Powered by <a href="https://www.facebook.com/">facebook.com</a>
+        </p>
+      </div>
     </div>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script src="./assest/js/app.js"></script>
   </body>
 </html>
