--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="assest/css/style.css" />
+    <link rel="stylesheet" href="./assest/css/style.css" />
     <link rel="stylesheet" href="./assest/themify-icons/themify-icons.css" />
   </head>
   <body>
@@ -43,7 +43,7 @@
       <div id="slider">
         <div class="slidernbg">
           <div class="sliderimg">
-            <img src="/assest/img/newyord.jpg" alt="" />
+            <img src="./assest/img/newyord.jpg" alt="" />
             <div class="text-content">
               <h2 class="text-heading">New York</h2>
               <div class="text-d">
@@ -53,7 +53,7 @@
           </div>
 
           <div class="sliderimg">
-            <img src="/assest/img/chicago.jpg" alt="" />
+            <img src="./assest/img/chicago.jpg" alt="" />
             <div class="text-content">
               <h2 class="text-heading">Chicago</h2>
               <div class="text-d">
@@ -63,7 +63,7 @@
           </div>
 
           <div class="sliderimg">
-            <img src="/assest/img/lordang.jpg" alt="" />
+            <img src="./assest/img/lordang.jpg" alt="" />
             <div class="text-content">
               <h2 class="text-heading">Los Angeles</h2>
               <div class="text-d">
@@ -94,15 +94,15 @@
           <div class="anh">
             <div class="panh1">
               <p class="name1">Name</p>
-              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+              <img src="./assest/img/onr.jpg" alt="Name" class="anh1" />
             </div>
             <div class="panh1">
               <p class="name1">Name</p>
-              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+              <img src="./assest/img/onr.jpg" alt="Name" class="anh1" />
             </div>
             <div class="panh1">
               <p class="name1">Name</p>
-              <img src="/assest/img/onr.jpg" alt="Name" class="anh1" />
+              <img src="./assest/img/onr.jpg" alt="Name" class="anh1" />
               <div class="clear"></div>
             </div>
           </div>
