--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    \
+    <meta
+      property="og:image"
+      content="https://nguyenvanthuong250603.github.io/the-band/assest/img/anhchup.png"
+    />
     <title>The Band</title>
+    <link
+      rel="icon"
+      href="https://www.clipartmax.com/png/full/201-2018621_1-skull-hacker-icon.png"
+      type="image/png"
+      sizes="16x16"
+    />
     <link
       rel="stylesheet"
       type="text/css"
